add search button

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Image Gallery</h1>
-        <input type="text" id="searchInput" placeholder="Search images..." />
+        <h1>Image Search</h1>
+        <input type="text" id="searchInput" placeholder="Search for images..." />
         <button id="searchButton">Search</button>
-        <div id="gallery" class="gallery"></div>
-        <div class="pagination">
-            <button id="prevButton" disabled>Previous</button>
-            <span id="pageInfo"></span>
-            <button id="nextButton">Next</button>
+        <div id="results" class="results"></div>
+    </div>
 </body>
 </html>
