--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="index.js"></script>
-    <title>Document</title>
+    <title>AdoptADog</title>
+    
+   
 </head>
+<div class="header">
+    <p >Call Our Puppy Conierges 787-985-5485</p>
+   
+        
+</div>
 <body>
     <div class="container">
         <h1>Image Search</h1>
         <input type="text" id="searchInput" placeholder="Search for images..." />
         <button id="searchButton">Search</button>
         <div id="results" class="results"></div>
+
     </div>
 </body>
 </html>
