added bckground pic

--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
    
 </head>
 <div class="header">
-    <p >Call Our Puppy Conierges 787-985-5485</p>
-   
+    <p >Call Our Puppy Conierge 787-985-5485</p>
+    <div style="margin-bottom:0px;" class="navbar"> <!-- nav bar class  -->
+        <a style="padding: 12px;" href="" class="w3-bar-item w3-button">Avaiable Pups</a> <!-- nav bar for Avaiable Pups  -->
+        <a style="padding: 12px" href="" class="w3-bar-item w3-button">Our promise </a><!-- nav bar to Our promise  -->
+        <a style="padding: 12px" href="" class="w3-bar-item w3-button">About Us</a><!-- About Us  -->
         
 </div>
-<body>
+<body >
     <div class="container">
-        <h1>Image Search</h1>
-        <input type="text" id="searchInput" placeholder="Search for images..." />
+        <h1 style=" color: white;">Find Your Purfect Pup</h1>
+        <input type="text" id="searchInput" placeholder="Browse Breeds" />
         <button id="searchButton">Search</button>
         <div id="results" class="results"></div>
-
+        
     </div>
 </body>
 </html>
