change header color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input type="text" id="searchInput" placeholder="Browse Breeds" />
         <button id="searchButton">Search</button>
         <div id="results" class="results"></div>
-        
+        <button type="button" onclick="alert('Are You Sure You Want To Leave This Page')">Browse All Puppies</button>
     </div>
 </body>
 </html>
